# MasterRTL

./: .gitignore  Makefile  examples_usage.py  pyproject.toml
example/: migrate_pickle.py  run.sh
example/module/TinyRocket_init_tr_converted/: ALU_sog_node_dict_tr.pkl  BreakpointUnit_sog_node_dict_tr.pkl  CSRFile_sog_node_dict_tr.pkl  IBuf_sog_node_dict_tr.pkl  MulDiv_sog_node_dict_tr.pkl  PlusArgTimeout_sog_node_dict_tr.pkl  TinyRocket_rest_sog_node_dict_tr.pkl
src/masterrtl/: __init__.py
src/masterrtl/cli/: __init__.py  main.py
src/masterrtl/feature_extract/: area.py  feature_extra_graph_STA.py  graph_power.py  module_power.py  pred_slack_calibration.py  train_path_rfr.py
src/masterrtl/ml_model/: infer.py  preprocess.py  train.py
src/masterrtl/preproc/: delay_propagation.py  tr_propagate.py
src/masterrtl/pyverilog/ast_code_generator/: codegen.py  touch.py
src/masterrtl/pyverilog/controlflow/: active_analyzer.py  active_range.py  controlflow_analyzer.py  splitter.py  transition.py
src/masterrtl/pyverilog/dataflow/: bindvisitor.py  dataflow.py  dataflow_analyzer.py  dataflow_codegen.py  graphgen.py  merge.py  modulevisitor.py  optimizer.py  reorder.py  replace.py  signalvisitor.py  subset.py  visit.py  walker.py
src/masterrtl/pyverilog/utils/: identifierreplace.py  identifiervisitor.py  inference.py  op2mark.py  scope.py  signaltype.py  util.py
src/masterrtl/pyverilog/vparser/: ast.py  lexer.py  parser.py  preprocessor.py
src/masterrtl/vlg2ir/: analyze_verilog.py  ast_analyzer.py  directed_graph.py  directed_graph_node.py  directed_graph_subnode.py  directed_subgraph.py  graph_processor.py  graph_stat.py
src/masterrtl/yosys/: clean_verilog.py  generate_sog.py
ys_script/: run_TinyRocket_sog.ys
